force-app/main/default/objects/Krow__Assignment_Rate__c/Krow__Assignment_Rate__c.object-meta.xml
<CustomObject>
    <label>Assignment Rate</label>
    <nameField>
        <displayFormat>AR-{0}</displayFormat>
        <label>Assignment Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>