force-app/main/default/objects/Krow__Assignment_Rate__c/fields/Krow__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>