force-app/main/default/objects/Krow__Assignment_Rate__c/fields/Krow__Project_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Assignment__c</fullName>
    <label>Project Assignment</label>
    <referenceTo>Krow__Project_Assignment__c</referenceTo>
    <relationshipLabel>Assignment Rates</relationshipLabel>
    <relationshipName>Assignment_Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>